--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!doctype html>
+<html class="no-js" lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<meta name="description" content="A basic responsive Resume - Ryan Steffes, User Interface Designer">
 
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+  </body>
+</html>
