--- a/index.html
+++ b/index.html
@@ -8,5 +8,105 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
+
+    <div class="Header">
+			<a href="/" class="LogoWrapper"><img src="images/RyanSteffesPhotographer.jpg" alt="Ryan Steffes, Software Architect and Photographer" /></a>
+			<p class="Strap">Ryan Steffes, Software Engineer, System Designer, and Photographer</p>
+		</div>
+
+<div class="Experience">
+    Human Resources Assistant
+    Company Name
+
+    Measurement Incorporated
+    Dates Employed Feb 2019 – Present
+    Employment Duration 9 mos
+    Location Raleigh-Durham, North Carolina Area
+
+    Seasonal scoring position requires reading and evaluating student responses in a consistent and accurate manner, being conscious of time sensitivities. After scoring for a project, I joined the human resource team to onboard remote readers for future projects using myStaffingPro systems. I am responsible for processing applications and verifying submitted documents in a fast, confidential, and consistent manner.
+    MagicEars
+    Independent Contractor/Teacher
+
+    Company Name
+
+    MagicEars
+    Dates Employed Mar 2019 – Present
+    Employment Duration 8 mos
+
+    Implemented curriculum in an online face to face education platform for Chinese students aged 6 to 12. Tasks include provide meaningful feedback and educational goals to students and parents.
+    Mister Guy Photography
+    General Manager
+
+    Company Name
+
+    Mister Guy Photography
+    Dates Employed 2009 – Dec 2018
+    Employment Duration 9 yrs
+
+    Responsible for excellent customer service, including receiving correspondence, booking meetings, and accounts receivable
+    Guided customers through contract provisions and discussed their rights with them
+    Responsible for the design and execution of Weddings and other religious events and cel... See more
+    Bridal Details
+    Bridal Details
+    VIPKid
+    Independent Contractor/Teacher
+
+    Company Name
+
+    VIPKid
+    Dates Employed 2017 – 2018
+    Employment Duration 1 yr
+
+    Implemented VIPKIDs curriculum in an online face to face education platform for Chinese students aged 6 to 12. Tasks included providing meaningful feedback and educational goals to students and parents.
+    ARA
+    Senior Staff Scientist
+
+    Company Name
+
+    ARA
+    Dates Employed 2004 – 2013
+    Employment Duration 9 yrs
+    Location Raleigh-Durham, North Carolina Area
+
+    Developed software for government clients in multiple programming languages, predominantly C++/C#
+    Managed software defects using Rational tools
+    Project Manager for WarFighter Wizard, a tool that encapsulated engineering tools into a... See more
+    Fayetteville Technical Community College
+    Adult High School Teacher
+
+    Company Name
+
+    Fayetteville Technical Community College
+    Dates Employed Jun 2004 – Aug 2004
+    Employment Duration 3 mos
+    Location Fayetteville NC
+
+    Taught science in Adult High School certification classes.
+    Fayetteville Christian School
+    Teacher
+
+    Company Name
+
+    Fayetteville Christian School
+    Dates Employed Sep 2003 – Jun 2004
+    Employment Duration 10 mos
+    Location Fayetteville, NC
+
+    Taught 7th and 8th Grade Science.
+    Computer Science Corporation
+    Software Developer
+
+    Company Name
+
+    Computer Science Corporation
+    Dates Employed May 2001 – Jun 2003
+    Employment Duration 2 yrs 2 mos
+    Location Moorestown, NC
+
+    Software development for AEGIS Weapon System project.
+    Developed prototype C++ versions of a real time radar control software system.
+    Investigated problem reports and submitted fixes.
+    </div>
+
   </body>
 </html>
