Updated to CV text
CV text and a wee bit of formatting

--- a/index.html
+++ b/index.html
@@ -14,98 +14,106 @@
 			<p class="Strap">Ryan Steffes, Software Engineer, System Designer, and Photographer</p>
 		</div>
 
-<div class="Experience">
-    Human Resources Assistant
-    Company Name
+<div class="PesonalInformation">
+  Ryan Steffes
 
-    Measurement Incorporated
-    Dates Employed Feb 2019 – Present
-    Employment Duration 9 mos
-    Location Raleigh-Durham, North Carolina Area
+  <p class="BioParagraph">I am proud to have come from a home that emphasized traditional values and that strongly esteemed work ethic, integrity and intellectual rigor. I take great pleasure in the translation of practical experience into the transmission of knowledge.  I am looking for employment that will allow me to work with a team, challenge me daily and allow me to join others in making a difference.</p>
+  <p class="Contact">
+    PHONE:
+    919-624-4098
+    RBSTEFFES@gmail.com
+  </p>
+  </div>
+  <div class="Resume">
+  <p class="Hobbies">
+    Photography
+    Fruit and vegetable gardening
+    Exercise (Certified Personal Trainer)
+  </p>
+  <p class="Skills">
+    Software Languages and Skills:
+    C++/C#, Java, PHP, Perl, Python, CSS, HTML, Adobe Suite, MySQL
 
-    Seasonal scoring position requires reading and evaluating student responses in a consistent and accurate manner, being conscious of time sensitivities. After scoring for a project, I joined the human resource team to onboard remote readers for future projects using myStaffingPro systems. I am responsible for processing applications and verifying submitted documents in a fast, confidential, and consistent manner.
-    MagicEars
-    Independent Contractor/Teacher
+    Rational Rose, Rational Clearcase
+    Ability to critically analyze and problem-solve
+    Can translate complex technical solutions from “geek” to end-user
+    Can break down complex concepts into teachable units
+  </p>
 
-    Company Name
+     <p class="Education">
+      Taylor University, Upland, Indiana 2001
+      Bachelor of Science (Majored in Computer Science and Business Information Systems)
+      </p>
 
-    MagicEars
-    Dates Employed Mar 2019 – Present
-    Employment Duration 8 mos
+        <p class="Experience">
+      TEACHING-RELATED EXPERIENCE
+      Measurement, Inc (Durham, NC) - Reader, Scorer, Temporary HR
+      February 2019 – Present
+      Read and evaluate student responses according to established rubrics
+      Completed training and qualified for scoring accuracy according to state criteria
+      Work with MyStaffingPro to process and hire applicants for remote reading
+      Certified:  English Language Proficiency Scoring;  Elementary and Intermediate Non-stimulus Narrative Scoring
 
-    Implemented curriculum in an online face to face education platform for Chinese students aged 6 to 12. Tasks include provide meaningful feedback and educational goals to students and parents.
-    Mister Guy Photography
-    General Manager
+      MagicEars (Online, Beijing, China) - ESL Teacher (Independent Contractor)
+      March 2019 – Present
+      Implement curriculum in an online video face-to-face education platform for Chinese students aged 6 to 12
+      Provide feedback and educational goals to students and parents
+      Facilitate small group activities emphasizing critical learning
+      Contribute constructive feedback to program structure and management procedures
 
-    Company Name
+      VIPKIDS (Online, Beijing, China) - Independent Contractor, ESL Teacher
+      December 2017 – December 2018
+      Implemented VIPKIDs curriculum in an online face to face education platform for Chinese students aged 6 to 12
+      Provided feedback and educational goals to students and parents
 
-    Mister Guy Photography
-    Dates Employed 2009 – Dec 2018
-    Employment Duration 9 yrs
 
-    Responsible for excellent customer service, including receiving correspondence, booking meetings, and accounts receivable
-    Guided customers through contract provisions and discussed their rights with them
-    Responsible for the design and execution of Weddings and other religious events and cel... See more
-    Bridal Details
-    Bridal Details
-    VIPKid
-    Independent Contractor/Teacher
 
-    Company Name
 
-    VIPKid
-    Dates Employed 2017 – 2018
-    Employment Duration 1 yr
+      Fayetteville Technical Community College (Fayetteville, NC) - Teacher, Adult Education
+      April - August 2004
+      Taught sciences to adult students in the adult high school program.
+      Instructed in classroom and laboratory settings
+      Graded and scored student assignments and maintained student records.
 
-    Implemented VIPKIDs curriculum in an online face to face education platform for Chinese students aged 6 to 12. Tasks included providing meaningful feedback and educational goals to students and parents.
-    ARA
-    Senior Staff Scientist
+      Fayetteville Christian School (Fayetteville, NC) –Teacher
+      August 2003 – April 2004
+      7th/8th Grade Science, Boys 7th Grade Bible
+      Developed lesson plans during accreditation process
+      Worked one on one with my students, while also providing creative, fun, and challenging learning programs for the entire class.
+      Instructed in classroom and laboratory settings
+      Graded and scored student assignments and maintained student records.
 
-    Company Name
+      ENTREPRENEUR
 
-    ARA
-    Dates Employed 2004 – 2013
-    Employment Duration 9 yrs
-    Location Raleigh-Durham, North Carolina Area
+      Steffes Event Services (Raleigh, NC) - General Manager, Principal Photographer, Event Coordinator
+      2013 - 2018
+      Provided excellent customer service, receiving awards for Customer Choice Best 2016, 2017 from Wedding Wire
+      Handled correspondence, booking meetings, and accounts receivable
+       Guided customers through contract provisions and explained how the interaction would work, including explanation of  their rights
+      Responsible for the design and execution of weddings, other religious events and celebrations.  In this role, I handled:
+      Vendor negotiations and oversight
+      Project management of events
+      Photographed and videoed events, which involved planning equipment logistics, adherence to strict timelines and timely provision of a high-quality product.
+      Production and design of photography customer products, including albums and video
 
-    Developed software for government clients in multiple programming languages, predominantly C++/C#
-    Managed software defects using Rational tools
-    Project Manager for WarFighter Wizard, a tool that encapsulated engineering tools into a... See more
-    Fayetteville Technical Community College
-    Adult High School Teacher
+      SOFTWARE DEVELOPMENT
 
-    Company Name
+      Applied Research Associates (Raleigh, NC) - Staff Scientist
+      2004 - 2013
+      Developed software for government clients in multiple programming languages, predominantly C++/C#
+      Managed software defects using Rational tools
+      Project Manager for WarFighter Wizard, a tool that encapsulated engineering tools into a user friendly HTML based interface designed for intelligence officers in the US military
+      Created and presented user requirements statements and participated in training programs to ensure user requirements were accurately captured
+      Adhered to CMMI certification standards and assisted in creating CMMI process documentation
+      Wrote and presented user documentation to stakeholders and clients, including government liaisons
+      Provided technical documentation of complex software interfaces for technical users
 
-    Fayetteville Technical Community College
-    Dates Employed Jun 2004 – Aug 2004
-    Employment Duration 3 mos
-    Location Fayetteville NC
+      Computer Sciences Corporation (Moorestown, NJ) - Software Developer
+      May 2001 – July 2003
+      Internship was followed by employment
+      Converted C Code to C++ for naval radar system
+      </p>
 
-    Taught science in Adult High School certification classes.
-    Fayetteville Christian School
-    Teacher
-
-    Company Name
-
-    Fayetteville Christian School
-    Dates Employed Sep 2003 – Jun 2004
-    Employment Duration 10 mos
-    Location Fayetteville, NC
-
-    Taught 7th and 8th Grade Science.
-    Computer Science Corporation
-    Software Developer
-
-    Company Name
-
-    Computer Science Corporation
-    Dates Employed May 2001 – Jun 2003
-    Employment Duration 2 yrs 2 mos
-    Location Moorestown, NC
-
-    Software development for AEGIS Weapon System project.
-    Developed prototype C++ versions of a real time radar control software system.
-    Investigated problem reports and submitted fixes.
     </div>
 
   </body>
