--- a/Example/Lesson 3/Activity 3-3/index.html
+++ b/Example/Lesson 3/Activity 3-3/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
   <div class="Wrap">
-   <div class="Header">
+   <div class="Header centered">
      <h1>Activity 03-03</h1>
    </div>
    <div class="WrapMiddle">
