--- a/Example/In Class/codesnip.html
+++ b/Example/In Class/codesnip.html
@@ -1,3 +1,5 @@
+<a href="https://waketechedu-my.sharepoint.com/:u:/g/personal/rbsteffes_waketech_edu/EXGGE0Fe50RJu0zzcUxgxvoBYw2_eXnnm2a786AQbDcAaw?e=5wh9f0">Images in Gallery Below</a>
+
 
 <!-- Code to embed a smugmug gallery --!>
   <iframe src="https://steffesevents.smugmug.com/frame/slideshow?key=ZmzmQR&autoStart=1&captions=1&navigation=1&playButton=0&randomize=1&speed=3&transition=fade&transitionSpeed=2" width="800" height="600" frameborder="no" scrolling="no"></iframe>
