--- a/Example/In Class/codesnip.html
+++ b/Example/In Class/codesnip.html
@@ -1,14 +1,14 @@
 <a href="https://waketechedu-my.sharepoint.com/:u:/g/personal/rbsteffes_waketech_edu/EXGGE0Fe50RJu0zzcUxgxvoBYw2_eXnnm2a786AQbDcAaw?e=5wh9f0">Images in Gallery Below</a>
 
 
-<!-- Code to embed a smugmug gallery --!>
+<!-- Code to embed a smugmug gallery -->
   <iframe src="https://steffesevents.smugmug.com/frame/slideshow?key=ZmzmQR&autoStart=1&captions=1&navigation=1&playButton=0&randomize=1&speed=3&transition=fade&transitionSpeed=2" width="800" height="600" frameborder="no" scrolling="no"></iframe>
 
-<!-- EmbedResponsively.com generated embed container --!>
+<!-- EmbedResponsively.com generated embed container -->
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://steffesevents.smugmug.com/frame/slideshow?key=ZmzmQR&autoStart=1&captions=1&navigation=1&playButton=0&randomize=1&speed=3&transition=fade&transitionSpeed=2' width='800' height='600' frameborder='no' scrolling='no'></iframe></div>
 
 
-<!-- @import statement to embed google fonts --!>
+<!-- @import statement to embed google fonts -->
 <style>
 @import url('https://fonts.googleapis.com/css?family=Eczar:400,800|Gentium+Basic|Pacifico&display=swap');
 </style>
