CSS Theme and Media Query
Added a media query based theming option to demonstrate CSS variables

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ryan Steffes, Learning Engineer</title>
+    <link rel="stylesheet" href="css/dark_style.css"  media="screen and (max-width: 500px)" />
+    <link rel="stylesheet" href="css/light_style.css" media="screen and (min-width: 500px)" />
     <link rel="stylesheet" href="css/resume_style.css" />
   </head>
   <body>
