--- a/Unit2.html
+++ b/Unit2.html
@@ -23,9 +23,9 @@
       <h3>Unit 2: How the body works.</h3>
       <section class="article-section">
         <h3>Learning Objectives</h3>
-        <ul>
+        <ul>e
           <li>The learner can describe what a basal metabolic rate is.</li>
-          <li>The learner can use a chart to assess their BMR.</li>
+          <li>The learner can use a chart to calculate their BMR.</li>
           <li>The learner can explain how the body uses energy.</li>
 
         </ul>
@@ -76,14 +76,21 @@
           <h2>Student Engagement, Personalization, Gamification</h2>
           <p>The primary way for students to interact with this material is by actually working through the math for themselves.  In this unit, there should be a calculator similar to the one <a href="https://www.bmi-calculator.net/bmr-calculator/harris-benedict-equation/">here</a>, along with an interactive form to allow the student to calculate their BMR. </p>
           <p>It would be nice to take the ability discussed in unit 1, personal avatar generation, and use that here, generating an avatar for the learner, as well as a selection of activities and frequencies.  The avatar could demonstrate a "Sims" type lifestyle, using the activities, in a sort of activity loop, which would be associated with real exercise examples.  In this way, learners can see the relationship between the described activity levels and a real life with those choices.</p>
-          <p>Another useful demonstration would be a simple avatar of a human with calories in and calories out, which could be adjusted, along with meal timings.  The simulation could show whether the body was likely to be storing calories or releasing them, as a simple demonstration of how blood sugar is maintained in the body.</p>
+          <p>Another useful demonstration would be a simple avatar of a human with calories in and calories out, which could be adjusted, along with meal timings.  The simulation could show whether the body was likely to be storing calories or releasing them, as a simple demonstration of how blood sugar is maintained in the body.  If the body is in deficit, projections could be made about the potential negative consequences.  In this way, learners can add their own metrics and see if they are meeting their caloric needs.</p>
+          <h3>Using False Branching</h3>
+          <p>This material would benefit from using false branching to encourage the learners to make guesses as they go to promote interactiveness and attention.  Implementing an EdPuzzle like interactivity that stops and asks questions as each topic is introduced will encourage students to apply the knowledge as they go.  Interactivity could be added after introducing the Hayes Benedict equation, to compare BMR to total caloric needs,  as well as after the macronutrients are introduced. Once this functionality is implemented, it could be exercised at various points in all the videos.</p>
+
+
           <h2>Community, Assessment</h2>
           <p>For this material, the main learning objectives are most easily assessed for content using a simple worksheet.  However, the most valuable form of assessment for this type of material is a long term life change, which typically requires support over a long period of time.  The online forums described in Unit 1 should have sections designed to serve as long term support groups.  It is important for learners to have outside support to make sure that they are correctly interpretting the advice given for creating a lifestyle plan.  The support group must be heavily moderated to ensure healthy advice is given and to watch for potentially troubling mental health issues, which must be referred to appropriate resources. Long term, it is the follow up success of students obtaining these objectives and implementing them in their personal lives that will determine the success of the program.  The reciprocal teaching done on these boards discussing the appropriateness of goals, may encourage improved engagement with the material long after a traditional assessment period might have lapsed at the end of this unit. </p>
-          <p></p>
+          <h3>Pre-Assessment</h3>
+          <p>This content is heavily targeted at changing biases and attitudes toward calculating BMR.  To help with engagement, there should be a pre-assessment portion, in which the learner attempts to guess their daily caloric needs and describes how they came to that conclusion.  It is expected that people will grossly underestimate their activity level and caloric need.  As post assessment, learners should look at their reasoning and estimates, and compare them to the calculated value.  They could then discuss the potential differences on the community forum.  Besides simply verifying with the instructor that their estimates are correct, discussion is beneficial to reinforce the message that even though they may expect to be around 2000 calories and lightly active, this is rarely the correct assessment.</p>
+
+
      </section>
         <section class="div--shadowed-brand-color">
           <ol>
-
+            <li>Moreno, R., & Mayer, R. E. (1999). Cognitive principles of multimedia learning: The role of modality and contiguity. Journal of Educational Psychology, 91, 358-368</li>
           </ol>
         </section>
       </section>
