--- a/Unit3.html
+++ b/Unit3.html
@@ -27,7 +27,7 @@
         <ul>
           <li>The learner will be able to recognize dangers of persistent catabolic states.</li>
           <li>The learner will be able to describe how calculate their metabolic rate.</li>
-          <li>The learner will be able to create a goal for themselves that is sustainable and healthy.</li>
+          <li>The learner will be able to create a goal for themselves that is sustainable and "healthy".</li>
           <li>The learner will be able to identify flaws in potential goals.</li>
         </ul>
       </section>
@@ -85,10 +85,12 @@
             The video content above attempts to address the content using several design principles.  It integrates graphic demonstrations while simultaneously demonstrating the concepts using integrated text and audio narration.  This is an attempt to make the concepts of growing and shrinking contiguious within the teaching. It attempts to link learning objective descriptions to depictions of the body growing and shrinking. Demonstrating the principles while describing them links the materials more strongly, according to Moreno and Mayer (1999).  </p>
         <h3>Areas for Expansion</h3>
           <h2>Student Engagement, Personalization, Gamification</h2>
-          <p></p>
+          <p>Students can engage with this material by simply doing their own needs assessment.  If learners wish to use this material to learn how to make a body modification, the learner could use an interactive calendar with which they may enter their vital statistics and project a reasonable time to reach their goal.  Additionally, they could note on the calender where their planned exercises are, and determine if their goals are realistic. Once they create this goal, they can evaluate it's realistic outcomes as compared to their own lives when interacting with the community, as outlined below.  Once learners calculate their actual needs in a safe way that is ideal for their life, they can evaluate their own choices, and share their findings with the support community.  As these are necessarily long term goals for most people, the access and engagement with the community should persist and be availabe long after the course is completed.</p>
           <h2>Community, Collaboration, Inclusion</h2>
-          <p></p>
-          <p></p>
+          <p>This section requires support the most of all the sections.  Because the caloric needs learners calculate may be extremely counter intuitive, interaction with the instructor and the community is critical to keep learners on track.  Many students will simply refuse to believe that they require as many calories as they do to live a high energy lifestyle.  Following up with discussions and questions adds a lot of opportunities for reciprocal teaching. As noted before, however, the sensitivity of the topic and the potential for health crisis awareness must be carefully monitored (and referred for professional help when appropriate).
+            The instructors and moderators of the community must be careful that advice is given accuractely, respectfully, and with consideration given to health needs.  It may be necessary to have divided communities, by demographics to provide a safe place to discuss health, weight and goals.  This may encourage more open and free communication.  The intent is to make sure the advice is scientifically founded, but presented in a judgement free environment. As mentioned above, it is important to create an environment that is welcoming and inviting, so that the learners are able to create a support group that lasts beyond the course into becoming a support community during their progress toward their goal.</p>
+          <h3>Pre-assessment and Post assessment</h3>
+          <p>Prior to engaging the material, the learner should answer questions discussing the amount of caloric restriction that is reasonable to lose weight.  If they wish to use this material to lose weight, they should attempt to estimate how long, in weeks, a reasonable amount of time to lose that weight.  After creating a goal with the material in this unit, the learner should reassess their goals using the course material and determine if their estimate is realistic.  On the discussion forum, students should discuss what changes they may make in their lifestyle in order to accomplish their goal.  This will help bring consistency to the somewhat abstract concepts such as health and wellness which can have different clinical meanings than they do social meanings.  Group evaluation and discussion of goals helps reinforce the learning objective that students can identify flaws in their goals by creating them, working with them, and discussing them.  They can also reinforce the learning that under eating causes over training injuries through group support and discussions about problems had in the past. </p>
      </section>
         <section class="div--shadowed-brand-color">
           <ol>
